# Turing_College

1.2_project/: ERD.mwb  README.md  m1s2_project.ipynb  requirements.txt
1.3_project/: 1.3_project.ipynb  1.3_project_updated.ipynb  eda.ipynb  eda_2.ipynb  for_checking.ipynb  frequent_publishers.csv  functions_all.py  m1s3_project copy 2.ipynb  m1s3_project copy.ipynb  m1s3_project.ipynb  m1s3_project_w_ids copy 2.ipynb  m1s3_project_w_ids.ipynb  transformations.ipynb  upload_to_mysql.ipynb
1.4_project/: README.md  books.py  cleaning.py  database.py  database_loader.py  db_api.py  db_api_2.py  eda.ipynb  ingestion.ipynb  ingestion_original.ipynb  main.py  models.py  raw_credits_df.csv  settings.env  settings.py
1.4_project_clean/: .gitignore  README.md  data_analysis.ipynb  database.py  database_loader.py  dataframe_cleaner.py  functions.py  main.ipynb  models.py  query_recommender_api copy.py  query_recommender_api.py  raw_titles_df.csv  requirements.txt  settings_example.py  virtual_env
2.1_project/: example_use.py  main.ipynb
2.1_project_demo/: README.md  README_change.md  main.ipynb  main_no_generic_types.py  pyproject copy.toml  pyproject.toml
2.1_project_demo/Temp/: main copy.ipynb  main.ipynb
2.2_project/: .gitignore  benchmarking.py  create_database.py  local_env  main.ipynb  readme.md  requirements.txt  weather_call.py  weather_call_process.py
2.4_project/: backup_shell.sh  crontab_sechedule.sh
Airflow_DAGs/: Chapter_2.py
Learning/: Filter() Function.py  Fluent_python.ipynb  Learn_python_in_x_minutes.py  Playground.ipynb  collections.py  (+12 more)
(+49 files in other folders)
